# Ubuntu

./: OpenCV_examples  README.md  inshow.cpp
BA/: CMakeLists.txt  g2o_template.md  pose_estimation_3d2d.cpp
BA/3D/: scene1.txt
BA/Examples/: pose_estimation_3d2d.cpp
BA/camra_extrinsic/Examples/: pose_estimation_3d2d.cpp
BA/camra_extrinsic/data/3D/: scene2.txt  scene4.txt
BA/camra_extrinsic/data/im/: camera3_im.txt  camera4_im.txt  camera5_im.txt
BA/camra_extrinsic/data/pixel/: scene1.txt  scene2.txt
BA/camra_extrinsic/data/trans/: ams2-3.txt
BA/camra_extrinsic/include/: BundleAdjustment.hpp  EdgeProjection.hpp  Loadfile.hpp  VertexPose.hpp
BA/camra_extrinsic/src/: BundleAdjustment.cpp  EdgeProjection.cpp  Loadfile.cpp  VertexPose.cpp
BA/curve_fitting/: CMakeLists.txt
BA/curve_fitting/Examples/: curvefitting.cpp
BA/curve_fitting/include/: BundleAdjustment.hpp  CurveFittingEdge.hpp  CurveFittingVertex.hpp
BA/curve_fitting/src/: BundleAdjustment.cpp  CurveFittingVertex.cpp  CurverFittingEdge.cpp
BA/data/3D/: scene1.txt  scene3.txt  scene5.txt
BA/data/trans/: ams3-4.txt  ams5-1.txt
BA/include/: EdgeProjection.hpp  Loadfile.hpp  VertexPose.hpp
BA/src/: BundleAdjustment.cpp  Loadfile.cpp  VertexPose.cpp
BA/trans/: ams1-2.txt  ams4-5.txt
BA/vertexEdgeTemplate/include/: BundleAdjustmentG2O.hpp  Edge.hpp  Vertex.hpp
BA/vertexEdgeTemplate/src/: BundleAdjustmentG2O.cpp  Edge.cpp  Vertex.cpp
Binocular/: Intrinsic1.xml  stereo_calib.cpp
Develop_environment/: bash_config.md
Fundamentation/Algorithm/: Algorithm.md  Implement.md  Theory.md
Fundamentation/C++/: Singleton.cpp  interview.md  test.cpp
Harris/: main.cpp
Harris_sample/: CMakeLists.txt  main.cpp
Interview/Algorithm/: Algorithm.md  Kalman_filtering.md
Interview/C++/: interview.md
Interview/C++/memcopy/: CMakeLists.txt
OpenCV/Binocular/: CMakeLists.txt  Intrinsic0.xml
OpenCV/Harris/: CMakeLists.txt
OpenCV/SURF/: main.cpp
OpenCV/imput_vector/: CMakeLists.txt
OpenCV/imshow/: CMakeLists.txt
OpenCV/imwrite/: main.cpp
OpenCV/solvepnp/: CMakeLists.txt  in4.txt  pixe3.txt  pose_estimation_3d2d.cpp
OpenCV/subpxiel/: main.cpp
OpenCV/verify/: CMakeLists.txt  camera1_im.txt  pixe2.txt  t1.txt  t2.txt
OrbFeatureDetection/: CMakeLists.txt
OrbFeatureDetection/src/: ExtractorNode.cpp  ORBFeature.cpp
RT/: pose_estimation_3d2d.cpp
RT/cube2/: RT2R.txt  RT2T.txt  im2.txt  pixe2.txt
RT/cube3/: RT3R.txt  RT3T.txt  im3.txt  pixe3.txt
RT/cube4/: RT4R.txt  RT4T.txt  im4.txt  pixe4.txt  point4.txt
SGBM/: CMakeLists.txt
SGBM/include/: SemiGlobalMatching.h  sgm_util.h  stdafx.h
SGBM/src/: SemiGlobalMatching.cpp  main.cpp  sgm_util.cpp
SURF/: CMakeLists.txt
TEST/: CMakeLists.txt  main.cpp
camera_calibration/: CMakeLists.txt  main.cpp
ceres/curveFit/: CMakeLists.txt
ceres/curveFit/Examples/: curve.cpp
ceres/curveFit/include/: Costfunc.hpp
ceres/curveFit/src/: Costfunc.cpp
ceres/test1/: CMakeLists.txt
ceres/test1/Examples/: main.cpp  main2.cpp  main3.cpp
ceres/test1/include/: Costfun.hpp  data.h
ceres/test1/src/: Costfun.cpp
featureMatchRegistration/: CMakeLists.txt
g2o_2/camera3/: C3_1_1.txt  (+4 more)
imput_vector/: main.cpp
imshow/: CMakeLists.txt  inshow.cpp
imwrite/: CMakeLists.txt
poseErr/: CMakeLists.txt
practice/version1/mousedrawpoints/: CMakeLists.txt
practice/version1/mousedrawpoints/Examples/: test.cpp
practice/version3/: CMakeLists.txt
practice/version3/data/batchProcess/: Toronto3D2laz.py  voxeldownsize.py
practice/version3/data/script/: imu_pose.json
practice/version3/data/tmp/: point_cloud.json
practice/version3/include/: GeoReference.hpp  ProjectToImages.hpp  ogr_conversions.h
practice/version3/src/: EulerConvert.cpp  GeoReference.cpp  isometry3d_interpolation_buffer.cpp  ogr_conversions.cpp
process/: pose_estimation_3d2d.cpp
rt/: in2.txt  in4.txt  pixe2.txt  pixe4.txt  point4.txt  pose_estimation_3d2d.cpp
scipt/: Batchprocessing.py  Batchrename.py  batchFilter.py  batchMultiProcess.py  batchMultiThreads.py  processConcurrency.py  processUsingGpu.py
sgbm/: CMakeLists.txt  main.cpp
solvepnp/: CMakeLists.txt  cube3.txt  cube4.txt  in3.txt  pixe4.txt  point3.txt  pose_estimation_3d2d.cpp
stereo/: stereo_calib.cpp
stereo_calib/: CMakeLists.txt  TransMatrix.txt  camera1.txt  camera2.txt  distor1.txt  distor2.txt  sgbm.cpp
stereo_calibration/: stereo_calib.cpp
subpxiel/: CMakeLists.txt  main.cpp
uShi-Timasi/: CMakeLists.txt  main.cpp
verify/: pixe1.txt  pose_estimation_3d2d.cpp
version1/solvepnp/: CMakeLists.txt
version1/solvepnp/Examples/: pose_estimation.cpp  pose_estimation_3d2d.cpp
version1/solvepnp/data/: pixelPoints.txt  pppoints.txt  result.txt  result1.txt  result2.txt  result4.txt  result5.txt
version1/solvepnp/include/: BundleAdjustment.hpp  PoseEdge.hpp  PoseVertex.hpp
version1/solvepnp/src/: BundleAdjustment.cpp  PoseEdge.cpp  PoseVertex.cpp
version2/: CMakeLists.txt
version2/Examples/: test.cpp
version2/include/: Pose1Topose2.hpp
version2/json/: drawpointpairOnimage.json  pcdProjectToimages.json  posetopose.json  test.json
version2/json/LidarChessPlan/pcd/: Plane10.pcd  Plane5.pcd  Plane8.pcd
version2/json/LidarChessPlan/txt/: 10.txt  11.txt  8.txt
version2/json/data/wp/: 8.txt  9.txt
version2/json/drawPointpairs/Err/: 1.txt  10.txt  11.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  Err_reprojection.py
version2/json/drawPointpairs/XYZuv/: 10.txt  11.txt  2.txt  4.txt  5.txt  7.txt  8.txt  9.txt
version2/json/drawPointpairs/result/: gif.py
version2/json/pcdToimage/: Batchprocess_pcdToimage.py
version2/json/pcdToimage/origin/: 0001.pcd  0009.pcd  0010.pcd
version2/json/pcdToimage/pointsCloud/: 1.txt  2.txt  5.txt  7.txt  9.txt
version2/json/pointCloud/: 0011.pcd
version2/json/pointpair/: out1.txt  out10.txt  out2.txt  out3.txt
version2/json/result/txt/: out10.txt  out2.txt  out7.txt  out8.txt
version2/orther/: CMakeLists.txt  EulerConvert.cpp
version2/orther/json/: color_images.json
version2/src/: PcdprojectToImages.cpp  Pose1Topose2.cpp
(+179 files in other folders)
